[package]
name = "async-http1-lite"
version = "0.3.2"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Asynchronous http1 stream."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/http1-rs"
homepage = "https://github.com/bk-rs/http1-rs"
documentation = "https://docs.rs/async-http1-lite"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[dependencies]
http1-spec = { version = "0.3", default-features = false, path = "../http1-spec" }

http = { version = "0.2", default-features = false }
futures-io = { version = "0.3", default-features = false }
async-sleep = { version = "0.4", default-features = false, features = ["rw"] }
async-trait = { version = "0.1", default-features = false }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["io"] }
async-sleep = { version = "0.4", default-features = false, features = ["impl_async_io"] }
futures-lite = { version = "1" }
