[package]
name = "async-http1-lite-demo-async-net"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_with_http_proxy"
path = "src/client_with_http_proxy.rs"

[[bin]]
name = "client_with_tls"
path = "src/client_with_tls.rs"

[dependencies]
async-http1-lite = { path = "../..", version = "0.2", features = ["futures_io"] }
futures-lite = { version = "0.1", default-features = false, features = ["std"] }
async-net = "0.1"
async-tls = "0.9"
