[package]
name = "async-http1-lite-demo-tokio"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "async_http1_lite_demo_tokio_client"
path = "src/client.rs"

[dependencies]
async-http1-lite = { path = "../.." }
async-sleep = { version = "0.4", features = ["impl_tokio"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
